--- a/Danh_sach_tai_lieu_tham_khao.bib
+++ b/Danh_sach_tai_lieu_tham_khao.bib
@@ -1,43 +1,56 @@
-@misc{Socket.IO,
-  author = {Socket.IO},
-  title = {Socket.IO},
-  url = {https://socket.io/docs/v4/},
+@misc{ebay,
+  url = {https://www.ebay.com/},
   urldate = {2022-06-30}
 }
+@misc{sohot,
+  url = {https://sohot.vn/},
+  urldate = {2022-06-30}
+}
+@misc{lacvietauction,
+  url = {https://lacvietauction.vn/},
+  urldate = {2022-06-30}
+}
+@misc{Socket.IO,
+  title = {What Socket.IO is?},
+  url = {https://socket.io/docs/v4/},
+  urldate = {2022-06-23}
+}
 @misc{MVC,
-    author = {w3schools.in},
     title = {What is MVC Architecture?},
     url = {https://www.w3schools.in/mvc-architecture},
-    urldate = {2022-06-30}
+    urldate = {2022-06-23}
+}
+@misc{MVC2,
+    title = {MVC Framework - Introduction},
+    url = {https://www.tutorialspoint.com/mvc_framework/mvc_framework_introduction.htm},
+    urldate = {2022-06-23}
 }
 @misc{ReactJS,
-    author = {reactjs.org},
     title = {What ReactJS?},
     url = {https://reactjs.org/docs/getting-started.html},
-    urldate = {2022-06-30}
+    urldate = {2022-06-23}
 }
 @misc{MySQL,
-    author = {mysql.com},
     title = {What MySQL?},
     url = {https://www.mysql.com/why-mysql/},
-    urldate = {2022-06-30}
+    urldate = {2022-06-23}
 }
 @misc{Bootstrap,
-    author = {getbootstrap.com},
     title = {Get started with Bootstrap.},
     url = {https://getbootstrap.com/docs/5.2/getting-started/introduction/},
-    urldate = {2022-06-30}
+    urldate = {2022-06-23}
 }
 
 @misc{Laravel,
-    author = {laravel.com},
-    title = {Why Laravel ?},
     url = {https://laravel.com/docs/9.x},
-    urldate = {2022-06-30}
+    urldate = {2022-06-23}
 }
 @misc{PHP,
-    author = {php.net},
-    title = {What PHP?},
     url = {https://www.php.net/docs.php},
-    urldate = {2022-06-30}
+    urldate = {2022-06-23}
+}
+@misc{ClientServer,
+    title = {Client Server Model?},
+    url = {https://www.tutorialspoint.com/data_communication_computer_network/client_server_model.htm},
+    urldate = {2022-06-23}
 }
