--- a/DoAn.tex
+++ b/DoAn.tex
@@ -78,7 +78,7 @@
 \setlength{\headheight}{10pt}
 
 \def \TITLE{ĐỒ ÁN TỐT NGHIỆP}
-\def \AUTHOR{NGUYỄN VĂN ABC}
+\def \AUTHOR{NGUYỄN THỊ TRÀ}
 
 % ===================================================
 \titleformat{\chapter}[hang]{\centering\bfseries}{CHƯƠNG \thechapter.\ }{0pt}{}[]
@@ -283,7 +283,7 @@
 
 \newpage
 %\pagestyle{fancy} % Áp dụng header và footer
-\chapter{THỰC NGHIỆM VÀ ĐÁNG GIÁ}
+\chapter{THỰC NGHIỆM VÀ ĐÁNH GIÁ}
 \label{chapter:Experiment}
 \subfile{Chuong/4_Ket_qua_thuc_nghiem}
 
