--- a/Tu_viet_tat.tex
+++ b/Tu_viet_tat.tex
@@ -35,7 +35,7 @@
 \newglossaryentry{CRSF}{
     type=\acronymtype,
     name={CRSF},
-    description={Kỹ thuật tấn công giả mạo)},
+    description={Kỹ thuật tấn công giả mạo (Cross Site Request Forgery)},
     first={CRSF}
 }
 \newglossaryentry{DATN}{
@@ -43,12 +43,6 @@
     name={ĐATN},
     description={Đồ án tốt nghiệp},
     first={ĐATN}
-}
-\newglossaryentry{REST}{
-    type=\acronymtype,
-    name={REST},
-    description={REpresentational State Transfer},
-    first={REST}
 }
 \newglossaryentry{Admin}{
     type=\acronymtype,
