--- a/Tu_viet_tat.tex
+++ b/Tu_viet_tat.tex
@@ -32,11 +32,11 @@
     description={Giao thức điều khiển truyền vận (Transmission Control Protocol)},
     first={TCP}
 }
-\newglossaryentry{CRSF}{
+\newglossaryentry{CSRF}{
     type=\acronymtype,
-    name={CRSF},
+    name={CSRF},
     description={Kỹ thuật tấn công giả mạo (Cross Site Request Forgery)},
-    first={CRSF}
+    first={CSRF}
 }
 \newglossaryentry{DATN}{
     type=\acronymtype,
@@ -97,4 +97,10 @@
     name={Blade},
     description={Template engine đơn giản},
     first={Blade}
+}
+\newglossaryentry{BID}{
+    type=\acronymtype,
+    name={BID},
+    description={Sự trả giá},
+    first={BID}
 }
