--- a/Danh_sach_tai_lieu_tham_khao.bib
+++ b/Danh_sach_tai_lieu_tham_khao.bib
@@ -15,13 +15,17 @@
   url = {https://socket.io/docs/v4/},
   urldate = {2022-06-23}
 }
+@misc{Socket2,
+  title = {What Socket.IO is not?},
+  url = {https://socket.io/docs/v4/},
+  urldate = {2022-07-30}
+}
 @misc{MVC,
     title = {What is MVC Architecture?},
     url = {https://www.w3schools.in/mvc-architecture},
     urldate = {2022-06-23}
 }
 @misc{MVC2,
-    title = {MVC Framework - Introduction},
     url = {https://www.tutorialspoint.com/mvc_framework/mvc_framework_introduction.htm},
     urldate = {2022-06-23}
 }
@@ -29,6 +33,11 @@
     title = {What ReactJS?},
     url = {https://reactjs.org/docs/getting-started.html},
     urldate = {2022-06-23}
+}
+@misc{ReactJSDOM,
+    title = {DOM Elements},
+    url = {https://reactjs.org/docs/dom-elements.html},
+    urldate = {2022-07-30}
 }
 @misc{MySQL,
     title = {What MySQL?},
